5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1616_2918.log
== SUBMITION (2019-04-01 14:09:07) 
-- CODE:
n=int(input"geracao atual:")
x=2**n
print(x)
-- EXECUTION TIME:
0.14943
-- ERROR:
  File "/home/codebench/codes/1616/2918/main.py", line 1
    n=int(input"geracao atual:")
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:09:40) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- EXECUTION TIME:
0.221468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:09:45) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- EXECUTION TIME:
0.219582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:10:25) 
-- CODE:
n=int(input("geracao atual: "))
x=2**n
print(x)
-- EXECUTION TIME:
0.20789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:10:47) 
-- CODE:
n=int(input("geracao atual: "))
x=2**n
print(x)
-- EXECUTION TIME:
0.149207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:53) 
-- CODE:
n=int(input("geracao atual: "))
x=2**n
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:11:12) 
-- CODE:
n=int(input("geracao atual: "))
x=2**n
print(x)
-- EXECUTION TIME:
0.143948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:19:39) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- EXECUTION TIME:
0.184964
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:20:49) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print x
-- EXECUTION TIME:
0.254064
-- ERROR:
  File "/home/codebench/codes/1616/2918/main.py", line 3
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:21:08) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print (x)
-- EXECUTION TIME:
0.17805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:21:16) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- EXECUTION TIME:
0.187866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:27) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:22:44) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- EXECUTION TIME:
0.142003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:55) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:23:54) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)


-- EXECUTION TIME:
0.125205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:24:59) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.159059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:05) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:25:19) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.168267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:27:23) 
-- CODE:
n=int(input("geração atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.193325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:27:25) 
-- CODE:
n=int(input("geração atual:"))
x=2**n
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:27:51) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.147323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:27:53) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.124752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:27:54) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:28:18) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.201082
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:52) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:32:09) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.207008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:32:19) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.162272
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:34) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:02) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- EXECUTION TIME:
0.150486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2918/main.py", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:53) 
-- CODE:
n=int(input("geracao atual:"))
x=2**n
print(x)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:06) 
-- CODE:
var1=int(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)
round(x,  2)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '28.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:09) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)





-- OUTPUT:
28.5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:26) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1,around  2)
print(var2)





-- ERROR:
File "XXXX", line 3
    print(var1,around  2)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:51:38) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1,)
print(var2)





-- EXECUTION TIME:
0.134696
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
26.95
8
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
42.42
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:46) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)





-- OUTPUT:
28.5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:52:12) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)





-- EXECUTION TIME:
0.204539
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
26.95
8
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
42.42
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:52:38) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:", around  2))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)





-- EXECUTION TIME:
0.205855
-- ERROR:
  File "/home/codebench/codes/1616/2918/main.py", line 1
    var1=float(input("o preco do valor integral do ingresso:", around  2))
                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:41) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:", around  2))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)





-- ERROR:
File "XXXX", line 1
    var1=float(input("o preco do valor integral do ingresso:", around  2))
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:57) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:",around  2))
var2=int(input("a quantidade ingressos:"))
print(var1)
print(var2)





-- ERROR:
File "XXXX", line 1
    var1=float(input("o preco do valor integral do ingresso:",around  2))
                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:30) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:",))
var2=int(input("a quantidade ingressos:"))
print(var1,round  2)
print(var2)






-- ERROR:
File "XXXX", line 3
    print(var1,round  2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:36) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:",))
var2=int(input("a quantidade ingressos:"))
print(var1,round 2)
print(var2)






-- ERROR:
File "XXXX", line 3
    print(var1,round 2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:55) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:"))
var2=int(input("a quantidade ingressos:"))
print(var1,round(2))
print(var2)






-- OUTPUT:
28.5 2
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:27) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:",round  2))
var2=int(input("a quantidade ingressos:"))
print(var1,
print(var2)






-- ERROR:
File "XXXX", line 1
    var1=float(input("o preco do valor integral do ingresso:",round  2))
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:40) 
-- CODE:
var1=float(input("o preco do valor integral do ingresso:",round(2)))
var2=int(input("a quantidade ingressos:"))
print(var1,
print(var2)






-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
